--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -3,6 +3,8 @@ github:
   tooling_branch_name: main
 conda_build:
   error_overlinking: true
+bot:
+  inspection: update-grayskull
 conda_forge_output_validation: true
 conda_install_tool: pixi
 conda_build_tool: rattler-build
